--- a/.github/workflows/format_and_gen_docs.yml
+++ b/.github/workflows/format_and_gen_docs.yml
@@ -3,11 +3,29 @@ name: formatting and generating docs
 on: push
 
 jobs:
-  production-deploy:
+  format_and_gen_docs:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: sudo apt update
-      - run: sudo apt install doxygen clang
-      - run: find . -iname '*.h' -o -iname '*.cpp' | xargs clang-format -i
-      - run: doxygen .doxygen.conf
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Updating
+        run: sudo apt update -y
+      
+      - name: Installing doxygen and clang
+        run: sudo apt install -y doxygen clang
+      
+      - name: Formatting all .cpp and .h files
+        run: find . -iname '*.h' -o -iname '*.cpp' | xargs clang-format -i
+      
+      - name: Generating docs
+        run: doxygen .doxygen.conf
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git diff --cached --quiet || git commit -m "Auto-format code using clang-format"
+          git push
+
