--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.30 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
 project(
     FileSystemModel
     VERSION 0.0.1
@@ -9,13 +9,14 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
-set(CONFIGS_SOURCES ${CMAKE_SOURCE_DIR}/configs)
-set(CONFIGS_DESTINATION ${CMAKE_BINARY_DIR}/configs)
+find_package(yaml-cpp REQUIRED)
 
 set(CONFIGS_SOURCES ${CMAKE_SOURCE_DIR}/configs)
 set(CONFIGS_DESTINATION ${CMAKE_BINARY_DIR})
 file(COPY ${CONFIGS_SOURCES} DESTINATION ${CONFIGS_DESTINATION})
 
-# add_subdirectory(tests)
+#add_subdirectory(Tests)
+add_subdirectory(config)
+add_subdirectory(Dialogue)
 
-add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(config PUBLIC yaml-cpp::yaml-cpp)
