--- a/config/CMakeLists.txt
+++ b/config/CMakeLists.txt
@@ -1,7 +1,6 @@
-find_package(yaml-cpp REQUIRED)
+file(GLOB CONFIG_HEADER_FILES "include/config/*.h")
+file(GLOB CONFIG_SOURCE_FILES "source/*.cpp")
 
-file(GLOB CONFIG_HEADER_FILES "include/*.h")
-file(GLOB CONFIG_SOURCE_FILES "src/*.cpp")
 add_library(config STATIC ${CONFIG_HEADER_FILES} ${CONFIG_SOURCE_FILES})
 target_link_libraries(config PUBLIC yaml-cpp)
 target_include_directories(config PUBLIC include)
