--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
-find_package(yaml-cpp REQUIRED)
-
 set(CONFIGS_SOURCES ${CMAKE_SOURCE_DIR}/configs)
 set(CONFIGS_DESTINATION ${CMAKE_BINARY_DIR})
 file(COPY ${CONFIGS_SOURCES} DESTINATION ${CONFIGS_DESTINATION})
+
+add_subdirectory(config)
