--- a/.github/workflows/gen_docs.yml
+++ b/.github/workflows/gen_docs.yml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -34,3 +34,8 @@ jobs:
           git add .
           git diff --cached --quiet || git commit -m "Auto-format code using clang-format"
           git push
+      
+      - name: Publishing docs on github pages
+        uses: rayluo/github-pages-overwriter@v1.3
+        with:
+          source-directory: ./docs/html
