--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,4 @@ add_subdirectory(config)
 add_subdirectory(app)
 
 add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} config)
+target_link_libraries(${PROJECT_NAME} config app)
