--- a/.github/workflows/gen_docs.yml
+++ b/.github/workflows/gen_docs.yml
@@ -32,7 +32,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git diff --cached --quiet || git commit -m "Auto-format code using clang-format"
+          git diff --cached --quiet || git commit -m "Auto-generating docs"
           git push
       
       - name: Publishing docs on github pages
