--- a/configs/filesystem.cfg
+++ b/configs/filesystem.cfg
@@ -1,25 +1,48 @@
-block_size = 512
-system_block = 1
-catalog_start_block = 6
-
 system_info: {
-    volume_id = "VOL001"
-    owner_name = "Admin"
-    system_name = "RT-11"
-    defect_table = [2, 5, 10]
-}
+    volume_id = "VOL001";       
+    owner_name = "Admin";       
+    system_name = "RT-11";      
+    defect_table = [2, 5, 10];  
+};
 
 catalog: {
-    max_segments = 31;
-    segment_size_blocks = 2;
-}
+    max_segments = 31;          
+    segment_size_blocks = 2;    
+    entry_size_words = 8;       
+};
 
+// File Management
 file_mgmt: {
-    allocation_strategy = "BEST_FIT";
-    protect_deletion = false;
-}
+    allow_temporary_files = true
+    auto_convert_temp = true
+    protect_deletion = false
+};
+
+commands: {
+    init: {
+        initial_segments = 1
+        prompt_volume_info = true
+    };
+    
+    dir: {
+        show_free_areas = false
+        output_to_file = false
+        show_volume_info = true
+    };
+    
+    squeeze: {
+        defragment_free_space = true
+        verify_after = false         
+    };
+};
+
+defect_mgmt: {
+    replacement_blocks = [3, 7, 11]
+    auto_remap = true;               
+};
 
 logging: {
     enable_file_logging = true;
-    log_pattern = "[%Y-%m-%d %H:%M:%S] [%l] %v";
+    log_pattern = "[%Y-%m-%d %H:%M:%S] [%l] %v"
+    level = "info";                              
 }
