Start to develop application main class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ find_package(fmt REQUIRED)
 
 add_subdirectory(config)
 
-# add_subdirectory(app)
+ add_subdirectory(app)
 
 add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} config  fmt::fmt config++)
+target_link_libraries(${PROJECT_NAME} config app fmt::fmt config++)
