--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 add_subdirectory(configs)
 
+add_subdirectory(src/lib)
 add_subdirectory(src/config)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
