--- a/configs/CMakeLists.txt
+++ b/configs/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(CONFIG_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}")
 set(CONFIG_DEST_DIR "${CMAKE_BINARY_DIR}/configs")
 
-file(GLOB CONFIG_FILES "${CONFIG_SOURCE_DIR}/*.toml")
+file(GLOB CONFIG_FILES "${CONFIG_SOURCE_DIR}/*.cfg")
 
 set(OUTPUT_FILES "")
 foreach(FILE ${CONFIG_FILES})
