--- a/.github/workflows/gen_docs.yml
+++ b/.github/workflows/gen_docs.yml
@@ -23,6 +23,9 @@ jobs:
       
       - name: Installing doxygen and clang
         run: sudo apt install -y doxygen
+
+      - name: Making directory
+        run: mkdir docs
       
       - name: Formatting all .cpp and .h files
         run: doxygen .doxygen.conf
