--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ add_subdirectory(configs)
 add_subdirectory(src/lib)
 add_subdirectory(src/config)
 
+add_subdirectory(src/monitor)
+
 add_executable(${PROJECT_NAME} src/main.cpp)
 
 add_dependencies(${PROJECT_NAME} CopyConfigFiles)
