Update monitor layout

--- a/src/monitor/CMakeLists.txt
+++ b/src/monitor/CMakeLists.txt
@@ -1,7 +1,3 @@
-file(GLOB MONITOR_HEADER_FILES "include/*.h")
-file(GLOB MONITOR_SOURCE_FILES "source/*.cpp")
-
-add_library(monitor STATIC ${MONITOR_HEADER_FILES} ${MONITOR_SOURCE_FILES})
-target_link_libraries(monitor PRIVATE lib config)
-
-target_include_directories(monitor PUBLIC include)
+add_subdirectory(reading)
+add_subdirectory(validation)
+add_subdirectory(core)
