Remove old version of monitor

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,13 +4,12 @@ project(Tests)
 set(CMAKE_CXX_STANDARD 20)
 
 find_package(GTest REQUIRED)
-find_package(yaml-cpp REQUIRED)
 
-add_executable (Tests   source/main.cpp
-                        source/TestCaseConfig.cpp)
+file(GLOB TESTS_SOURCE_FILES "source/*.cpp")
+
+add_executable(Tests ${TESTS_SOURCE_FILES})
 
 target_link_libraries(Tests gtest
                             gtest_main
-                            config
-                            yaml-cpp::yaml-cpp
+                            monitor_readers
 )
