--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,5 +21,6 @@ add_subdirectory(src/monitor)
 add_subdirectory(tests)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
+target_link_libraries(${PROJECT_NAME} PRIVATE monitor)
 
 add_dependencies(${PROJECT_NAME} CopyConfigFiles)
