Update fs config and lookup functions

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,4 +12,6 @@ add_executable(Tests ${TESTS_SOURCE_FILES})
 target_link_libraries(Tests gtest
                             gtest_main
                             monitor
+                            config
+                            ${LIBCONFIG_LIBRARIES}
 )
