--- a/.github/workflows/gen_docs.yml
+++ b/.github/workflows/gen_docs.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Setup gh-pages branch
         run: |
-          git fetch origin gh-pages || true
+          git fetch origin gh-pages -f
           git checkout gh-pages || git checkout --orphan gh-pages
           git reset --hard
 
