--- a/.github/workflows/gen_docs.yml
+++ b/.github/workflows/gen_docs.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Setup gh-pages branch
         run: |
-          git checkout gh-pages
+          git checkout gh-pages || git checkout --orphan gh-pages
 
       - name: Commit and push docs
         run: |
