--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,15 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 
+set(CMAKE_BUILD_TYPE Debug)
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 add_subdirectory(configs)
 
 add_subdirectory(src/lib)
 add_subdirectory(src/config)
-
+add_subdirectory(src/filesystem)
 add_subdirectory(src/monitor)
 
 add_subdirectory(tests)
