Remove old version of monitor

--- a/src/monitor/CMakeLists.txt
+++ b/src/monitor/CMakeLists.txt
@@ -9,8 +9,7 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(spdlog)
 
 file(GLOB MONITOR_HEADER_FILES "include/*.h")
-file(GLOB MONITOR_SOURCE_FILES "source/logging/*.cpp" "source/reading/*.cpp")
-
+file(GLOB_RECURSE MONITOR_SOURCE_FILES "source/*.cpp")
 
 add_library(monitor STATIC ${MONITOR_HEADER_FILES} ${MONITOR_SOURCE_FILES})
 target_link_libraries(monitor PUBLIC config spdlog::spdlog_header_only)
