Update config parsing

--- a/configs/model.cfg
+++ b/configs/model.cfg
@@ -10,22 +10,14 @@ filesystem:
 
 monitor:
 {
-    prompt = "[enter command]"
-    logging:
+    input:
     {
-        console:
-        {
-            name = "console logger"
-            level = "debug"
-            pattern = "[%Y-%m-%d %H:%M:%S.%e] [%^%l%$] %v"
-        }
-
-        file:
-        {
-            name = "file logger"
-            level = "debug"
-            pattern = "[%Y-%m-%d %H:%M:%S.%e] [%^%l%$] %v"
-            output = "file.log"
-        }
+        prompt = "[enter new command]"
+        wait_for_input = true
+        from = "./tests/"
+    }
+    output:
+    {
+        to = "./logs/"
     }
 }
