--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,5 +12,6 @@ add_executable(Tests ${TESTS_SOURCE_FILES})
 target_link_libraries(Tests gtest
                             gtest_main
                             config
+                            monitor
                             ${LIBCONFIG_LIBRARIES}
 )
