--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,11 +15,11 @@ add_subdirectory(configs)
 
 add_subdirectory(src/lib)
 add_subdirectory(src/config)
-
- add_subdirectory(src/monitor)
-
+add_subdirectory(src/monitor)
 add_subdirectory(tests)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
+target_link_libraries(${PROJECT_NAME} config)
+
 
 add_dependencies(${PROJECT_NAME} CopyConfigFiles)
