--- a/configs/CMakeLists.txt
+++ b/configs/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(CONFIG_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}")
-set(CONFIG_DEST_DIR "${CMAKE_BINARY_DIR}/configs")
+set(CONFIG_DEST_DIR "${CMAKE_BINARY_DIR}/src/dialog/configs")
 
 file(GLOB CONFIG_FILES "${CONFIG_SOURCE_DIR}/*.json")
 
